--- a/index.html
+++ b/index.html
@@ -51,15 +51,8 @@
         <p class="text-3">Если вы хотите увидеть Таиланд в бархатный сезон, то посетите страну в период с ноября по февраль. В это время на большей части государства погода стоит сухая. Но при этом она не такая жаркая, как весной и летом.
         А вот на север королевства не стоит ехать в августе или сентябре. Ведь именно в это время тут идут сильные проливные дожди и ветер, которые испортят вам все впечатление.</p>
         <img src="img/погода2.jpg" alt="тучи">
-
-        
-
-
-
-
-
-
     </div>
+    <a href="#">xxx</a>
     
 </body>
 </html>
