--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <img src="img/погода2.jpg" alt="тучи">
     </div>
     <a href="#">xxx</a>
+    <p>
+        Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные.
+    </p>
     
 </body>
 </html>
